[GTK] [2.28.0] The Yelp build crashes if DISPLAY is not set https://bugs.webkit.org/show_bug.cgi?id=209431

Reviewed by Carlos Alberto Lopez Perez.

Remove the assert when display is not X11 nor Wayland, and simply return false to ensure acceleration is not used.

* UIProcess/gtk/AcceleratedBackingStore.cpp:
(WebKit::AcceleratedBackingStore::checkRequirements):

Canonical link: https://commits.webkit.org/222810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259380 268f45cc-cd09-0410-ab3c-d52691b4dbfc